--- a/views/list.pug
+++ b/views/list.pug
@@ -8,4 +8,4 @@ block content
 				ul
 					each key in keys
 						li
-							a(href='#{baseUrl}/edit/#{key.key}')= key.key
+							a(href=baseUrl+'/edit/'+key.key)= key.key
