--- a/views/edit.pug
+++ b/views/edit.pug
@@ -4,15 +4,14 @@ block content
 	.container
 		.row
 			.col-md-12
-				h1 Edit Blob "#{key}"
-				//- .blob= blob
+				h1= 'Edit Blob ' + key
 				form(method='POST')
 					.form-group
 						textarea(name='value', rows="50", cols="100")= blob
 					.form-group
 						input(type='submit', value='Submit')
 				#jsoneditor(style="width: 400px; height: 400px;")
-				
+
 				script.
 					var container = document.getElementById("jsoneditor");
 					var options = {};
